[package]
name = "rateslib"
version = "1.3.2"
edition = "2021"
exclude = [".github/*", "benches/*", "notebooks/*", ".readthedocs.yaml", "docs/*"]

[lib]
name = "rateslib"
path = "src/lib.rs"
#crate-type = ["rlib"]
#crate-type = ["cdylib"]  # for pyO3
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#pyo3 = { version = "0.20.3", features = ["abi3-py39", "extension-module"] }
serde = { version = "1.0", features = ["derive", "rc"] }
chrono = { version = "0.4.38", features = ["serde"] }
indexmap = { version = "1.9.3", features = ["serde"] }
ndarray = { version = "0.15.6", features = ["serde"] }
internment = {  version = "0.8.3", features = ["serde"] }
pyo3 = "0.21"
num-traits = "0.2.15"
auto_ops = "0.3.0"
numpy = "0.21"
itertools = "0.12.1"
statrs = "0.16"
bincode = "1.3"

serde_json = "1.0"

# --- This section should be live in development to use `cargo test --lib --no-default-features`
#[dependencies.pyo3]
#version = "0.21"

[features]
# multiple-pymethods = ["pyo3/multiple-pymethods"]
abi3-py39 = ["pyo3/abi3-py39"]
py03-chrono = ["pyo3/chrono"]
default = ["abi3-py39", "py03-chrono"]
# 'extension-module' has been added to 'features' of [tool.maturin] in pyproject.toml
#extension-module = ["pyo3/extension-module"]
#default = ["extension-module", "abi3-py39", "chrono"]

# -------------  When building commment this out and use the abi3-py39 feature in the above block.

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

#[[bench]]
#name = "my_benchmark"
#harness = false