[package]
name = "rateslib"
version = "2.5.0"
edition = "2021"
exclude = [
    ".github/*",
    "benches/*",
    "benchmarks/*",
    "notebooks/*",
    ".readthedocs.yaml",
    "docs/*",
    "PACKAGING.md",
    "PIP_FREEZE.txt",
    "requirements-minimum.txt"
]

[lib]
name = "rateslib"
path = "rust/lib.rs"
#crate-type = ["rlib"]
#crate-type = ["cdylib"]  # for pyO3
crate-type = ["lib"]

[[bin]]
name = "main"
path = "rust/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#pyo3 = { version = "0.20.3", features = ["abi3-py39", "extension-module"] }
serde = { version = "1.0", features = ["derive", "rc"] }
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2.7", features = ["serde"] }
ndarray = { version = "0.17", features = ["serde"] }
internment = {  version = "0.8", features = ["serde"] }
pyo3 = "0.27"
num-traits = "0.2"
auto_ops = "0.3"
numpy = "0.27"
itertools = "0.14"
statrs = "0.18"
bincode = { version = "2.0", features = ["serde"] }
serde_json = "1.0"

# --- This section should be live in development to use `cargo test --lib --no-default-features`
#[dependencies.pyo3]
#version = "0.21"

[features]
# multiple-pymethods = ["pyo3/multiple-pymethods"]
abi3-py310 = ["pyo3/abi3-py310"]
pyo3-chrono = ["pyo3/chrono"]
pyo3-indexmap = ["pyo3/indexmap"]
default = ["abi3-py310", "pyo3-chrono", "pyo3-indexmap"]
# 'extension-module' has been added to 'features' of [tool.maturin] in pyproject.toml
#extension-module = ["pyo3/extension-module"]
#default = ["extension-module", "abi3-py39", "chrono"]

# -------------  When building commment the below out.

#[dev-dependencies]
#criterion = { version = "0.4", features = ["html_reports"] }

#[[bench]]
#name = "my_benchmark"
#harness = false