# pyproject.toml

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "rateslib.rs"
python-source = "python"
bindings = "pyo3"
compatibility = "linux"
features = ["pyo3/extension-module"]
# rustc --print target-list
# https://doc.rust-lang.org/rustc/platform-support.html

[project]
name = "rateslib"
version = "1.4.0"
description = "A fixed income library for trading interest rates"
readme = "README.md"
authors = [{ name = "J H M Darbyshire"}]
license = { file = "LICENSE" }
keywords = ["interest rate", "derivatives", "swaps", "bonds", "fixed income"]
dependencies = [
    "numpy>=1.21.5",
    "matplotlib>=3.5.1",
    "pandas>=1.4.1",
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.1",
    "jupyterlab>=3.3.1",
    "sphinx>=7.1.0,<8.0",
    "coverage>=7.1.0",
    "sphinx-automodapi==0.16.0",
    "pydata-sphinx-theme==0.14.3",
    "nbsphinx==0.9.4",
    "pickleshare==0.7.5",  # for doc building with IPython
    "ruff==0.5.6",  # for code linting
]

[tool.pytest.ini_options]
# pythonpath = [".", "python/rateslib"]
minversion = "7.0"
addopts = ""  # use -s to show print capture, use -q for quiet, use -v for verbose
testpaths = [
    "python/tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.setuptools]
packages = ["rateslib"]

[project.urls]
Homepage = "https://github.com/attack68/rateslib"

[tool.ruff]
exclude = [
    ".git",
    ".github",
    "docs",
    "notebooks",
    "target",
    "venv9",
    "venv11",
    "scratch.py",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    "bench",
    "benchmarks",
]
# Same as Black.
line-length = 100
indent-width = 4
# Assume Python 3.12
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    #    # flake8-simplify
    #    "SIM",
    # isort
    "I",
]
ignore = [
    "B008",  # function calls in argument defaults, e.g. NoInput(0)
    "B006",  # mutable data structures for argument defaults, e.g. []
    "B904",  # raising within except clauses
    "B028",  # no explicit stack level
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"python/tests/*" = ["F401", "B"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["python"]

[tool.black]
line-length = 100
target-version = ['py39']